# PCB-detection

./: .gitignore  ANNOTATION_PLATFORM_README.md  COMPETITIVE_ANALYSIS.md  DEMO_README.md  DEPLOY.md  Dockerfile  PCB缺陷检测系统_产品介绍.pptx  PERCEPTION_QUALITY_GUIDE.md  PORTFOLIO.md  PORT_DEMO_ANALYSIS.md  PRODUCT.md  README.md  SLAM_GUIDE.md  STARTUP.py  api_quick_test.py  auto_label_pcb.py  auto_quality_checker.py  automotive_security.html  bootloader.html  bootloader_ota.html  canfd_democar.html  capl_basics.html  capl_demo.html  capl_test_framework.html  capture_screenshots.py  convert_deepcb.py  data_feedback.py  defect_detection_api.py  defect_root_cause.py  docker-compose.yml  export_onnx.py  index.html  industrial_detector.py  inference_demo.py  interactive_label_pcb.py  learning_roadmap.html  mqtt_communication.py  nav-styles.css  odx_diagnostics.html  optimize_train.py  (+24 more)
4_industrial_applications/: agv_slam_cqc_server.py  annotation_platform.py  api_server.py  async_inference_server.py  benchmark_concurrent.py  deploy_adapter.py  distributed_scheduler.py  grpc_websocket_client.py  grpc_websocket_server.py  high_available_arch.py  logistics_perception.py  port_data_system.py  rest_perception_server.py  slam_algorithms.py  slam_module.py  smart_label.py  sse_vision_server.py  unified_perception_slam.py  unified_server.py  universal_annotation.py
5_multimodal/: voice_chat_cli.py
PortComm/: PLCSimulator.py  PortComm.cs  PortComm.csproj  README.md  Test.cs  advanced_hmi.py  build.bat  comm_engine.py  config.py  (+19 more)
cpp/: CMakeLists.txt  perception_client.cpp  rest_client.cpp
(+81 files in other folders)
